# fpl-predict

./: .gitignore  pyproject.toml
src/fpl_predict/: cli.py
src/fpl_predict/strategy/: chips_2025_final.py
src/fpl_predict/transfer/: banking_logic.py  optimizer.py  recommend.py
